2008-03-11  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/msmsformat.cpp: New format to write input files for
	MSMS (Michael Sanner Molecular Surface) calculation program,
	contributed by Ugo Varetto and the Molekel project.

	* src/formats/moldenformat.cpp: Read input from Molden files,
	contributed by Ugo.

	* src/formats/Makefile.*: Add above.

2008-03-13  Chris Morley

	* include/openbabel/obutil.h: Revert the previous change.
	In Windows there is a min function in the default namespace
	(::min compiles ok). So it is essential that std::min is used.
	It's also better not to have using std; in header files. If
	there is a problem in Avagadro it would be better to find a
	solution there. Maybe a cause for its Windows version to crash?
	 
2008-03-10  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/obutil.h: replaced std::min() with min() and put
	using namespace std at the top of the file. The compiler only gave an
	error for this when compiling avogadro, not openbabel itself.
	(windows)

	* include/openbabel/builder.h: Added OBAPI.

2008-03-10  Jean Brefort  <jean.brefort@normalesup.org>

	* src/formats/cifformat.cpp: export space group if known.
	* src/formats/xml/cdxmlformat.cpp: removed a printf debug instruction.

2008-03-10  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/formats/smilesformat.cpp: Fixes from Craig James. Allow ring closure
	bonds in SMILES to be aromatic. Also check for ring closures in
	ParseComplex.

	* test/files/aromatics.smi: Add test for ring closure bug above.

2008-03-10  Noel O'Boyle <baoilleach@gmail.com>
	
	* test/cmlreadfile.cpp: Commented out the failing test. This is a
	minor bug on Linux.

2008-03-09  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/formats/gausscubeformat.cpp: Read/write multiple cubes. Always
	write in bohr. More error checking in write might be needed.

2008-03-06  Tim Vandermeersch <tim.vandermeersch@gmail.com>
